--- a/style.css
+++ b/style.css
@@ -26,6 +26,20 @@ a:hover {
 
 
 table, th, tr{
-    border: 3px solid gray;
-    text-align: left;
+    border: 3px dotted gray;
+    text-align: center;
+}
+
+@media (min-width: 500px) {
+    table, th, tr  {
+        border: 2px solid gray;
+        text-align: center;
+    }
+}
+
+@media (max-width: 499px) {
+    table, th, tr {
+        border: 2px solid gray;
+        text-align: left;
+    }
 }
