--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,18 @@ $grid-padding: 20px;
     font-family: cursive;
 }
 
+p {
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: center;
+}
+
+a[href="index.html"]::before {
+    content: "Return ";
+    font-weight: $font-weight;
+}
+
 a::after {
     content: "\21d0";
     font-weight: $font-weight;
