--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ p {
 
 a[href="index.html"]::before {
   content: "Return ";
-  font-weight: bold;
 }
 
 a[href="index.html"]::after {
@@ -38,6 +37,14 @@ a::before {
 
 a:hover {
   background-color: aqua;
+}
+
+img:not([src="amdahls_law.jpg"]) {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 @media screen and (min-width: 700px) {
