--- a/style.scss
+++ b/style.scss
@@ -41,6 +41,14 @@ a:hover {
     background-color: aqua; 
 }
 
+img:not([src="amdahls_law.jpg"]) {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
 @media screen and (min-width: 700px) {
     table, th, tr  {
         border: 3px dotted red;
