--- a/style.scss
+++ b/style.scss
@@ -23,10 +23,10 @@ div {
         max-height: 100%;
     }
 
-    ul, ol {
-        border: 2px solid green;
-    }
+}
 
+ul, ol > div{
+    border: 2px solid green;
 }
 
 %links {
